--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: compress
           <span>
               {% assign words = content | number_of_words %}
                 {% if words < 360 %}
-                  1 min
+                  <=1 min
                 {% else %}
                   {{ words | divided_by:180 }} mins
               {% endif %} read
